--- a/index.html
+++ b/index.html
@@ -11,22 +11,29 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/style.css" />
 
     <title>Frontend Mentor | Clipboard landing page</title>
   </head>
 
   <body>
     <header class="header">
-      <img src="images/logo.svg" alt="logo" class="logo" />
+      <img src="images/logo.svg" alt="logo" class="header--logo" />
       <div class="container-small">
         <h1 class="primary-heading">A history of everything you copy</h1>
         <p class="text">
           Clipboard allows you to track and organize everything you copy.
           Instantly access your clipboard on all your devices.
         </p>
-        <div class="btn-box">
-          <a href="#" class="btn btn-ios">Download for iOS</a>
-          <a href="#" class="btn btn-mac">Download for Mac</a>
+        <div class="btnbox">
+          <a href="#" class="btnbox--btn btn-ios">Download for iOS</a>
+          <a href="#" class="btnbox--btn btn-mac">Download for Mac</a>
         </div>
       </div>
     </header>
@@ -164,9 +171,9 @@
             Available for free on the App Store. Download for Mac or iOS, sync
             with iCloud and you’re ready to start adding to your clipboard.
           </p>
-          <div class="btn-box">
-            <a href="#" class="btn btn-ios">Download for iOS</a>
-            <a href="#" class="btn btn-mac">Download for Mac</a>
+          <div class="btnbox">
+            <a href="#" class="btnbox--btn btn-ios">Download for iOS</a>
+            <a href="#" class="btnbox--btn btn-mac">Download for Mac</a>
           </div>
         </div>
       </section>
