--- a/index.html
+++ b/index.html
@@ -23,219 +23,220 @@
   </head>
 
   <body>
-    <div class="container-big">
-      <header class="header">
-        <img src="images/logo.svg" alt="logo" class="header--logo" />
-        <div class="header--textbox container-small">
-          <h1 class="primary-heading">A history of everything you copy</h1>
-          <p class="text">
-            Clipboard allows you to track and organize everything you copy.
-            Instantly access your clipboard on all your devices.
-          </p>
-          <div class="header--btnbox btnbox">
-            <a href="#" class="btnbox--btn btn-ios">Download for iOS</a>
-            <a href="#" class="btnbox--btn btn-mac">Download for Mac</a>
-          </div>
+    <header class="header">
+      <img src="images/logo.svg" alt="logo" class="header--logo" />
+      <div class="header--textbox container-small container-big">
+        <h1 class="primary-heading">A history of everything you copy</h1>
+        <p class="text">
+          Clipboard allows you to track and organize everything you copy.
+          Instantly access your clipboard on all your devices.
+        </p>
+        <div class="header--btnbox btnbox">
+          <a href="#" class="btnbox--btn btn-ios">Download for iOS</a>
+          <a href="#" class="btnbox--btn btn-mac">Download for Mac</a>
         </div>
-      </header>
+      </div>
+    </header>
 
-      <main class="main">
-        <section class="section--track">
-          <div class="section--track-box1 container-small">
-            <h2 class="secondary-heading">Keep track of your snippets</h2>
-            <p class="text">
-              Clipboard instantly stores any item you copy in the cloud, meaning
-              you can access your snippets immediately on all your devices. Our
-              Mac and iOS apps will help you organize everything.
-            </p>
-          </div>
+    <main class="main container-big">
+      <section class="section--track">
+        <div class="section--track-box1 container-small">
+          <h2 class="secondary-heading">Keep track of your snippets</h2>
+          <p class="text">
+            Clipboard instantly stores any item you copy in the cloud, meaning
+            you can access your snippets immediately on all your devices. Our
+            Mac and iOS apps will help you organize everything.
+          </p>
+        </div>
 
-          <div class="section--track-box2 container-medium">
-            <div class="imgbox">
-              <img
-                src="images/image-computer.png"
-                alt="Apple computer"
-                class="img"
-              />
-            </div>
-
-            <div class="textbox">
-              <div class="textbox--feature">
-                <h3 class="tertiary-heading">Quick Search</h3>
-                <p class="text">
-                  Easily search your snippets by content, category, web address,
-                  application, and more.
-                </p>
-              </div>
-
-              <div class="textbox--feature">
-                <h3 class="tertiary-heading">iCloud Sync</h3>
-                <p class="text">
-                  Instantly saves and syncs snippets across all your devices.
-                </p>
-              </div>
-
-              <div class="textbox--feature">
-                <h3 class="tertiary-heading">Complete History</h3>
-                <p class="text">
-                  Retrieve any snippets from the first moment you started using
-                  the app.
-                </p>
-              </div>
-            </div>
-          </div>
-        </section>
-
-        <section class="section--access">
-          <div class="section--acess-textbox container-small">
-            <h2 class="secondary-heading">Access Clipboard anywhere</h2>
-            <p class="text">
-              Whether you’re on the go, or at your computer, you can access all
-              your Clipboard snippets in a few simple clicks.
-            </p>
-          </div>
-          <div class="section--access-imgbox container-medium">
+        <div class="section--track-box2 container-medium">
+          <div class="imgbox">
             <img
-              src="images/image-devices.png"
-              alt="Mobile and tablet deveice"
+              src="images/image-computer.png"
+              alt="Apple computer"
               class="img"
             />
           </div>
-        </section>
 
-        <section class="section--workflow">
-          <div class="section--workflow-textbox container-small">
-            <h2 class="secondary-heading">Supercharge your workflow</h2>
-            <p class="text">We’ve got the tools to boost your productivity.</p>
-          </div>
-
-          <div class="section--workflow-tools container-medium">
-            <div class="tool">
-              <img
-                src="images/icon-blacklist.svg"
-                alt="icon-blacklist"
-                class="tool-icon"
-              />
-              <h3 class="tertiary-heading">Create blacklists</h3>
+          <div class="textbox">
+            <div class="textbox--feature">
+              <h3 class="tertiary-heading">Quick Search</h3>
               <p class="text">
-                Ensure sensitive information never makes its way to your
-                clipboard by excluding certain sources.
+                Easily search your snippets by content, category, web address,
+                application, and more.
               </p>
             </div>
 
-            <div class="tool">
-              <img
-                src="images/icon-text.svg"
-                alt="icon-text"
-                class="tool-icon"
-              />
-              <h3 class="tertiary-heading">Plain text snippets</h3>
+            <div class="textbox--feature">
+              <h3 class="tertiary-heading">iCloud Sync</h3>
               <p class="text">
-                Remove unwanted formatting from copied text for a consistent
-                look.
+                Instantly saves and syncs snippets across all your devices.
               </p>
             </div>
 
-            <div class="tool">
-              <img
-                src="images/icon-preview.svg"
-                alt="icon-preview"
-                class="tool-icon"
-              />
-              <h3 class="tertiary-heading">Sneak preview</h3>
+            <div class="textbox--feature">
+              <h3 class="tertiary-heading">Complete History</h3>
               <p class="text">
-                Quick preview of all snippets on your Clipboard for easy access.
+                Retrieve any snippets from the first moment you started using
+                the app.
               </p>
             </div>
           </div>
-        </section>
+        </div>
+      </section>
 
-        <section class="section--featured container-medium">
+      <section class="section--access">
+        <div class="section--acess-textbox container-small">
+          <h2 class="secondary-heading">Access Clipboard Anywhere</h2>
+          <p class="text">
+            Whether you’re on the go, or at your computer, you can access all
+            your Clipboard snippets in a few simple clicks.
+          </p>
+        </div>
+        <div class="section--access-imgbox container-medium">
           <img
-            src="images/logo-google.png"
-            alt="logo-google"
-            class="featured-logo"
+            src="images/image-devices.png"
+            alt="Mobile and tablet deveice"
+            class="img"
           />
-          <img src="images/logo-ibm.png" alt="logo-ibm" class="featured-logo" />
-          <img
-            src="images/logo-microsoft.png"
-            alt="logo-microsoft"
-            class="featured-logo"
-          />
-          <img src="images/logo-hp.png" alt="logo-hp" class="featured-logo" />
-          <img
-            src="images/logo-vector-graphics.png"
-            alt="logo-vector-graphics"
-            class="featured-logo"
-          />
-        </section>
+        </div>
+      </section>
 
-        <section class="section--download">
-          <div class="section--download-textbox container-small">
-            <h3 class="secondary-heading">Clipboard for iOS and Mac OS</h3>
+      <section class="section--workflow">
+        <div class="section--workflow-textbox container-small">
+          <h2 class="secondary-heading">Supercharge your workflow</h2>
+          <p class="text">We’ve got the tools to boost your productivity.</p>
+        </div>
+
+        <div class="section--workflow-tools container-medium">
+          <div class="tool">
+            <img
+              src="images/icon-blacklist.svg"
+              alt="icon-blacklist"
+              class="tool-icon"
+            />
+            <h3 class="tertiary-heading">Create blacklists</h3>
             <p class="text">
-              Available for free on the App Store. Download for Mac or iOS, sync
-              with iCloud and you’re ready to start adding to your clipboard.
+              Ensure sensitive information never makes its way to your clipboard
+              by excluding certain sources.
             </p>
           </div>
 
-          <div class="section--download-btnbox btnbox">
-            <a href="#" class="btnbox--btn btn-ios">Download for iOS</a>
-            <a href="#" class="btnbox--btn btn-mac">Download for Mac</a>
-          </div>
-        </section>
-      </main>
-
-      <footer class="footer">
-        <div class="footer--box container-medium">
-          <img src="images/logo.svg" alt="Logo" class="footer--box-logo" />
-
-          <div class="footer--box-links">
-            <ul class="links">
-              <li><a href="#" class="link">FAQs</a></li>
-              <li><a href="#" class="link">Contact Us</a></li>
-            </ul>
-            <ul class="links">
-              <li><a href="#" class="link">Privacy Policy</a></li>
-              <li><a href="#" class="link">Press Kit</a></li>
-            </ul>
-            <ul class="links">
-              <li><a href="#" class="link">Install Guide</a></li>
-            </ul>
+          <div class="tool">
+            <img src="images/icon-text.svg" alt="icon-text" class="tool-icon" />
+            <h3 class="tertiary-heading">Plain text snippets</h3>
+            <p class="text">
+              Remove unwanted formatting from copied text for a consistent look.
+            </p>
           </div>
 
-          <div class="footer--box-icons">
-            <ul class="social-icons">
-              <li>
-                <a href="#"
-                  ><img
-                    src="images/icon-facebook.svg"
-                    alt="icon-facebook"
-                    class="social-icon"
-                /></a>
-              </li>
-
-              <li>
-                <a href="#"
-                  ><img
-                    src="images/icon-twitter.svg"
-                    alt="icon-twitter"
-                    class="social-icon"
-                /></a>
-              </li>
-
-              <li>
-                <a href="#"
-                  ><img
-                    src="images/icon-instagram.svg"
-                    alt="icon-instagram"
-                    class="social-icon"
-                /></a>
-              </li>
-            </ul>
+          <div class="tool">
+            <img
+              src="images/icon-preview.svg"
+              alt="icon-preview"
+              class="tool-icon"
+            />
+            <h3 class="tertiary-heading">Sneak preview</h3>
+            <p class="text">
+              Quick preview of all snippets on your Clipboard for easy access.
+            </p>
           </div>
         </div>
-      </footer>
-    </div>
+      </section>
+
+      <section class="section--featured container-medium">
+        <img
+          src="images/logo-google.png"
+          alt="logo-google"
+          class="section--featured-logo"
+        />
+        <img
+          src="images/logo-ibm.png"
+          alt="logo-ibm"
+          class="section--featured-logo"
+        />
+        <img
+          src="images/logo-microsoft.png"
+          alt="logo-microsoft"
+          class="section--featured-logo"
+        />
+        <img
+          src="images/logo-hp.png"
+          alt="logo-hp"
+          class="section--featured-logo"
+        />
+        <img
+          src="images/logo-vector-graphics.png"
+          alt="logo-vector-graphics"
+          class="section--featured-logo"
+        />
+      </section>
+
+      <section class="section--download">
+        <div class="section--download-textbox container-small">
+          <h3 class="secondary-heading">Clipboard for iOS and Mac OS</h3>
+          <p class="text">
+            Available for free on the App Store. Download for Mac or iOS, sync
+            with iCloud and you’re ready to start adding to your clipboard.
+          </p>
+        </div>
+
+        <div class="section--download-btnbox btnbox">
+          <a href="#" class="btnbox--btn btn-ios">Download for iOS</a>
+          <a href="#" class="btnbox--btn btn-mac">Download for Mac</a>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer">
+      <div class="footer--box container-medium">
+        <img src="images/logo.svg" alt="Logo" class="footer--box-logo" />
+
+        <div class="footer--box-links">
+          <ul class="links">
+            <li><a href="#" class="link">FAQs</a></li>
+            <li><a href="#" class="link">Contact Us</a></li>
+          </ul>
+          <ul class="links">
+            <li><a href="#" class="link">Privacy Policy</a></li>
+            <li><a href="#" class="link">Press Kit</a></li>
+          </ul>
+          <ul class="links">
+            <li><a href="#" class="link">Install Guide</a></li>
+          </ul>
+        </div>
+
+        <div class="footer--box-icons">
+          <ul class="social-icons">
+            <li>
+              <a href="#"
+                ><img
+                  src="images/icon-facebook.svg"
+                  alt="icon-facebook"
+                  class="social-icon"
+              /></a>
+            </li>
+
+            <li>
+              <a href="#"
+                ><img
+                  src="images/icon-twitter.svg"
+                  alt="icon-twitter"
+                  class="social-icon"
+              /></a>
+            </li>
+
+            <li>
+              <a href="#"
+                ><img
+                  src="images/icon-instagram.svg"
+                  alt="icon-instagram"
+                  class="social-icon"
+              /></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
